Fix to title align

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: blueviolet;
     margin-top: 90px;
     margin-left: 220px;
+    margin-right: 220px;
     font-family: Trebuchet MS;
     color: bisque;
 }
